# velovision-mec

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
ci_tools/: fakestream.sh
cornflakes/: Cargo.toml  build.rs
cornflakes/schemas/: vmec-request.capnp  vmec-response.capnp
cornflakes/src/: lib.rs
src/: main.rs  tests.rs
vmec-client/: Cargo.toml  build.rs
vmec-client/src/: main.rs
vmec-server/: Cargo.toml  build.rs  vmec-request.capnp
vmec-server/src/: main.rs
