[package]
name = "waverust-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rscam = "0.5.5"
jpeg-decoder = "0.3.0"
tch = "0.9.0"
turbojpeg = {version="0.5.2", features=["image"]}
image = "0.24.4"
show-image = "0.13.1"
ctrlc = "3.2.3"
zmq = "0.10.0"
thread_tryjoin = "0.3.0"
