[package]
name = "vmec-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rscam = "0.5.5"
jpeg-decoder = "0.3.0"
tch = "0.9.0"
turbojpeg = {version="0.5.2", features=["image"]}
image = "0.24.4"
show-image = "0.13.1"
ctrlc = "3.2.3"
zmq = "0.10.0"
capnp = "0.15.0"
cornflakes = { path = "../cornflakes" }
log = "0.4.17"
simple-logging = "2.0.2"
blake3 = "1.3.2"
clap = { version = "4.0.26", features = ["derive"] }

[build-dependencies]
capnpc = "0.15.0"
capnp = "0.15.0"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
